--- a/Binaries/Debug/Problem3/Templates/ReportTemplate.xaml
+++ b/Binaries/Debug/Problem3/Templates/ReportTemplate.xaml
@@ -58,7 +58,7 @@
             Auto Generated Report
         </Paragraph>
         <Paragraph TextAlignment="Center"  FontFamily="Segoe UI" FontSize="46" FontWeight="Bold">
-            Homeword 2
+            Homework 2
         </Paragraph>
         <Paragraph TextAlignment="Center" FontFamily="Segoe UI" FontSize="16">
             Congruential Method for generating pseudo-random numbers
