--- a/Src/Problem4/MainWindow.xaml
+++ b/Src/Problem4/MainWindow.xaml
@@ -1,8 +1,16 @@
-﻿<Window x:Class="Problem_4.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+﻿<Window x:Class="Problem4.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="Third Question" Height="313" Width="286.667"
+        ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Button Name="BtnCS1" Content="Case Study 1 - (Problem 1)" Height="25" Margin="10,10,10,0"
+                VerticalAlignment="Top" Cursor="Hand" MouseEnter="BtnsMouseEnter" MouseLeave="BtnsMouseLeave" />
+        <Button Name="BtnCS2" Content="Case Study 2 - (Problem 2)" Height="25" Margin="10,40,10,0"
+                VerticalAlignment="Top" Cursor="Hand" MouseEnter="BtnsMouseEnter" MouseLeave="BtnsMouseLeave" Click="BtnCs2Click" />
+        <Button Name="BtnCS3" Content="Case Study 3 - (Problem 3)" Height="25" Margin="10,70,10,0"
+                VerticalAlignment="Top" Cursor="Hand" MouseEnter="BtnsMouseEnter" MouseLeave="BtnsMouseLeave" />
+        <Button Name="BtnExit" Content="Exit" Margin="10,0,10,10" Height="22" VerticalAlignment="Bottom" Cursor="Hand"
+                Click="BtnExitClick" />
+        <TextBox x:Name="txtQuestionPreview" Margin="10,107,10,37" TextWrapping="Wrap" Text="// Question Preview"
+                 IsReadOnly="True" />
     </Grid>
 </Window>
