--- a/Src/Problem4/HighwayReportWindow.xaml
+++ b/Src/Problem4/HighwayReportWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window x:Class="Problem4.HighwayReportWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="HighwayReportWindow" Height="465" Width="708"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="Highway Report " Height="465" Width="708"
         Activated="WindowActivated" WindowState="Maximized">
     <Grid>
         <DocumentViewer Name="documentViewer" />
