--- a/Binaries/Debug/Problem4/Templates/HighwayReportTemplate.xaml
+++ b/Binaries/Debug/Problem4/Templates/HighwayReportTemplate.xaml
@@ -1,4 +1,4 @@
-﻿﻿<FlowDocument xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿ <FlowDocument xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:xrd="clr-namespace:CodeReason.Reports.Document;assembly=CodeReason.Reports"
               xmlns:crcv="clr-namespace:CodeReason.Reports.Charts.Visifire;assembly=CodeReason.Reports.Charts.Visifire"
@@ -68,6 +68,22 @@
             [This Page Intentionally Left Blank]
         </Paragraph>
     </Section>
+    <Section Padding="80,40,40,30" BreakPageBefore="True">
+        <Paragraph TextAlignment="Left" FontFamily="Segoe UI" FontSize="20">
+            Report Summery
+        </Paragraph>
+        <Paragraph/>
+        <Paragraph FontSize="14" FontFamily="Segoe UI">
+            <xrd:InlineDocumentValue PropertyName="ReportSummary" />
+        </Paragraph>
+        <Paragraph/>
+        <Paragraph TextAlignment="Left" FontSize="16" FontFamily="Segoe UI">
+            Accidents
+        </Paragraph>
+        <Paragraph FontSize="14" FontFamily="Segoe UI">
+            <xrd:InlineDocumentValue PropertyName="Accidents" />
+        </Paragraph>
+    </Section>
     <Section Padding="80,10,40,10" FontSize="12" BreakPageBefore="True">
         <Paragraph FontFamily="Segoe UI" FontSize="24" FontWeight="Bold" TextAlignment="Center">
             <xrd:InlineContextValue PropertyName="ReportTitle" />
@@ -103,7 +119,8 @@
                     <TableColumn Width="0.25*" />
                     <TableColumn Width="0.2*" />
                     <TableColumn Width="0.2*" />
-                    <TableColumn Width="0.12*" />
+                    <TableColumn Width="0.2*" />
+                    <TableColumn Width="0.14*" />
                 </Table.Columns>
                 <TableRowGroup Style="{StaticResource headerFooterRowStyle}">
                     <TableRow>
@@ -119,22 +136,27 @@
                         </TableCell>
                         <TableCell>
                             <Paragraph TextAlignment="Center">
-                                <Bold>Trip Start Time</Bold>
+                                <Bold>Start Time</Bold>
                             </Paragraph>
                         </TableCell>
                         <TableCell>
                             <Paragraph TextAlignment="Center">
-                                <Bold>Trip Duration</Bold>
+                                <Bold>Duration</Bold>
                             </Paragraph>
                         </TableCell>
                         <TableCell>
                             <Paragraph TextAlignment="Center">
-                                <Bold>Trip End Time</Bold>
+                                <Bold>End Time</Bold>
                             </Paragraph>
                         </TableCell>
                         <TableCell>
                             <Paragraph TextAlignment="Center">
-                                <Bold>Capacity</Bold>
+                                <Bold>Status</Bold>
+                            </Paragraph>
+                        </TableCell>
+                        <TableCell>
+                            <Paragraph TextAlignment="Center" FontFamily="10">
+                                <Bold>Passengers</Bold>
                             </Paragraph>
                         </TableCell>
                     </TableRow>
@@ -168,6 +190,11 @@
                         </TableCell>
                         <TableCell>
                             <Paragraph TextAlignment="Center">
+                                <xrd:InlineTableCellValue PropertyName="tripStatus" />
+                            </Paragraph>
+                        </TableCell>
+                        <TableCell>
+                            <Paragraph TextAlignment="Center">
                                 <xrd:InlineTableCellValue PropertyName="carCapacity"/>
                             </Paragraph>
                         </TableCell>
@@ -177,5 +204,15 @@
             </Table>
         </xrd:SectionDataGroup>
         
+    </Section>
+    <Section Padding="80,10,40,10" FontSize="12" BreakPageBefore="True" FontFamily="Segoe UI">
+        <Paragraph  FontFamily="Segoe UI" FontSize="14">
+            Charts
+        </Paragraph>
+
+        <Paragraph FontFamily="Segoe UI" FontSize="14" FontWeight="Normal" FlowDirection="RightToLeft">
+            <crcv:BarChart TableName="CarsChart" TableColumns="Number of Cars,Passengers" Width="16cm" Height="10cm" Title="Cars Chart" View3D="True" FlowDirection="RightToLeft">
+            </crcv:BarChart>
+        </Paragraph>
     </Section>
 </FlowDocument>
