--- a/Src/Problem4/HighwayReportWindow.xaml
+++ b/Src/Problem4/HighwayReportWindow.xaml
@@ -1,6 +1,6 @@
 ﻿<Window x:Class="Problem4.HighwayReportWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="Highway Report " Height="465" Width="708"
-        Activated="WindowActivated" WindowState="Maximized">
+        Activated="WindowActivated" WindowState="Maximized"  Icon="Images/icon.ico"> 
     <Grid>
         <DocumentViewer Name="documentViewer" />
     </Grid>
