--- a/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
+++ b/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
@@ -34,7 +34,7 @@
           
             
         </helixKit:HelixViewport3D>
-        <Button Content="Deploy!" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="ButtonBase_OnClick" />
+        <Button Content="Deploy!" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="BtnDeployOnClick" />
         <Button Content="MoveIt" HorizontalAlignment="Left" Margin="105,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Click="BtnMoveIt_OnClick" />
         
     </Grid>
