--- a/final.project/Source Code/FinalProject/MainWindow.xaml
+++ b/final.project/Source Code/FinalProject/MainWindow.xaml
@@ -1,8 +1,10 @@
 ﻿<Window x:Class="FinalProject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Final Project" Height="191" Width="239">
     <Grid>
-        
+        <Button Content="Auto Simulation" Margin="10,10,10,0" VerticalAlignment="Top" Click="BtnAutoSClick"/>
+        <Button Content="RealTime Simulation" Margin="10,35,10,0" VerticalAlignment="Top" Click="BtnRealTimeSimulation"/>
+
     </Grid>
 </Window>
