--- a/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
+++ b/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
@@ -33,14 +33,15 @@
             <helixKit:GridLinesVisual3D Thickness="0.01" Width="32" Length="32" MinorDistance="1" MajorDistance="1" />
 
         </helixKit:HelixViewport3D>
-        <Button Content="Move Simulation Clock" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top"
-                Width="138" Click="BtnDeployOnClick" />
-        <Button Content="Start Timer" HorizontalAlignment="Left" Margin="166,10,0,0" Grid.Row="1" VerticalAlignment="Top"
+        <Button Content="Start Timer" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1"
+                VerticalAlignment="Top"
                 Width="75" Click="BtnMoveIt_OnClick" />
-        <Button Content="Stop Timer" HorizontalAlignment="Left" Margin="246,10,0,0" Grid.Row="1" VerticalAlignment="Top"
+        <Button Content="Stop Timer" HorizontalAlignment="Left" Margin="90,10,0,0" Grid.Row="1" VerticalAlignment="Top"
                 Width="75" Click="StopTimer" />
-        <Label x:Name="LblRobotStatus"  Content="Robot Status :" Margin="10,35,0,0" Grid.Row="1" Height="37" VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" />
-        <Label x:Name="LblSimulationClick"  Content="Clock" Margin="10,72,0,0" Grid.Row="1" Height="37" VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" />
+        <Label x:Name="LblRobotStatus" Content="Robot Status :" Margin="10,35,0,0" Grid.Row="1" Height="37"
+               VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" FontSize="13" />
+        <Label x:Name="LblSimulationClick" Content="Clock" Margin="10,77,0,0" Grid.Row="1" Height="37"
+               VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" FontSize="13" />
 
     </Grid>
 </Window>
