--- a/final.project/Source Code/FinalProject/MainWindow.xaml
+++ b/final.project/Source Code/FinalProject/MainWindow.xaml
@@ -3,8 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Final Project" Height="191" Width="239">
     <Grid>
-        <Button Content="Auto Simulation" Margin="10,10,10,0" VerticalAlignment="Top" Click="BtnAutoSClick"/>
-        <Button Content="RealTime Simulation" Margin="10,35,10,0" VerticalAlignment="Top" Click="BtnRealTimeSimulation"/>
+        <Button Content="Auto Simulation" Margin="10,10,10,0" VerticalAlignment="Top" Click="BtnAutoSClick" Height="30"/>
+        <Button Content="RealTime Simulation" Margin="10,45,10,0" VerticalAlignment="Top" Click="BtnRealTimeSimulation" Height="30"/>
+        <Button x:Name="BtnExit" Content="Exit" Margin="10,0,10,10" VerticalAlignment="Bottom" Height="30" Click="BtnExit_Click"/>
 
     </Grid>
 </Window>
