--- a/final.project/Source Code/FinalProject/MainWindow.xaml
+++ b/final.project/Source Code/FinalProject/MainWindow.xaml
@@ -1,11 +1,12 @@
 ﻿<Window x:Class="FinalProject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Final Project" Height="191" Width="239">
+        Title="Final Project" Height="300" Width="239" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Button Content="Auto Simulation" Margin="10,10,10,0" VerticalAlignment="Top" Click="BtnAutoSClick" Height="30"/>
         <Button Content="RealTime Simulation" Margin="10,45,10,0" VerticalAlignment="Top" Click="BtnRealTimeSimulation" Height="30"/>
+        <Button  x:Name="BtnGraph" Content="Graphs (Exponential Disturbiotion)" Margin="10,80,10,0" VerticalAlignment="Top" Click="BtnGraphClick" Height="30"/>
+        <Button x:Name="BtnSimulationCharts" Content="Simulation Charts" Margin="10,115,10,0" VerticalAlignment="Top" Click="BtnSimulationChartsClick" Height="30"/>
         <Button x:Name="BtnExit" Content="Exit" Margin="10,0,10,10" VerticalAlignment="Bottom" Height="30" Click="BtnExit_Click"/>
-
     </Grid>
 </Window>
