--- a/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
+++ b/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
@@ -1,47 +1,52 @@
-﻿<Window x:Class="FinalProject.SimulationWorld.World"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:helixKit="http://helixtoolkit.codeplex.com"
         xmlns:simulationElements="clr-namespace:FinalProject.SimulationElements"
+        xmlns:FutureEventList="clr-namespace:FinalProject.SimulationElements.FutureEventList" x:Class="FinalProject.SimulationWorld.World"
         Title="World" Height="680" Width="840">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Menu Grid.Row="0">
-            <MenuItem Header="File"></MenuItem>
-            <MenuItem Header="View">
-                <MenuItem x:Name="MenuItemShowCameraInfo" Header="Show Camera Info" IsCheckable="True" IsChecked="True"></MenuItem>
-                <MenuItem x:Name="MenuItemShowFrameRate" Header="Show Frame Rate" IsCheckable="True" IsChecked="True"></MenuItem>
-                <MenuItem x:Name="MenuItemShowFieldOfView" Header="Show Field of View" IsCheckable="True"
-                          IsChecked="True">
-                </MenuItem>
-                <MenuItem x:Name="MenuItemShowCoordinateSystem" Header="Show Coordinate System" IsCheckable="True"
-                          IsChecked="True">
-                </MenuItem>
+            <MenuItem Header="File">
+                <MenuItem Header="Exit" Click="MnuItemExitClick"/>
             </MenuItem>
-            <MenuItem Header="Settings"></MenuItem>
-            <MenuItem Header="Tools"></MenuItem>
-            <MenuItem Header="About"></MenuItem>
+            <MenuItem Header="View">
+                <MenuItem x:Name="MenuItemShowCameraInfo" Header="Show Camera Info" IsCheckable="True" IsChecked="True"/>
+                <MenuItem x:Name="MenuItemShowFrameRate" Header="Show Frame Rate" IsCheckable="True" IsChecked="True"/>
+                <MenuItem x:Name="MenuItemShowFieldOfView" Header="Show Field of View" IsCheckable="True"
+                          IsChecked="True"/>
+                <MenuItem x:Name="MenuItemShowCoordinateSystem" Header="Show Coordinate System" IsCheckable="True"
+                          IsChecked="True"/>
+            </MenuItem>
+            <MenuItem Header="Timer">
+                <MenuItem Header="Start Timer" Click="BtnStartSimulationClick"/>
+                <MenuItem Header="Stop Timer" Click="BtnStopSimulationClick"/>
+            </MenuItem>
+            <MenuItem Header="About">
+                <MenuItem Header="About!" IsEnabled="False"/>
+            </MenuItem>
         </Menu>
         <helixKit:HelixViewport3D x:Name="Mother" Grid.Row="1"
-                                  ShowCameraInfo="{Binding IsChecked, ElementName=MenuItemShowCameraInfo}"
-                                  ShowCoordinateSystem="{Binding IsChecked, ElementName=MenuItemShowCoordinateSystem}"
-                                  ShowFieldOfView="{Binding IsChecked, ElementName=MenuItemShowFieldOfView}"
-                                  ShowFrameRate="{Binding IsChecked, ElementName=MenuItemShowFrameRate}">
-            <helixKit:SunLight />
-            <helixKit:GridLinesVisual3D Thickness="0.01" Width="32" Length="32" MinorDistance="1" MajorDistance="1" />
+                                  ShowCameraInfo="{Binding IsChecked, ElementName=MenuItemShowCameraInfo}" ShowCoordinateSystem="{Binding IsChecked, ElementName=MenuItemShowCoordinateSystem}" ShowFrameRate="{Binding IsChecked, ElementName=MenuItemShowFrameRate}" ShowFieldOfView="{Binding IsChecked, ElementName=MenuItemShowFieldOfView}">
+            <helixKit:SunLight/>
+            <helixKit:GridLinesVisual3D Length="32" MinorDistance="1" MajorDistance="1" Thickness="0.01" Width="32"/>
 
         </helixKit:HelixViewport3D>
-        <Button Content="Start Timer" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1"
-                VerticalAlignment="Top"
-                Width="75" Click="BtnMoveIt_OnClick" />
-        <Button Content="Stop Timer" HorizontalAlignment="Left" Margin="90,10,0,0" Grid.Row="1" VerticalAlignment="Top"
-                Width="75" Click="StopTimer" />
-        <Label x:Name="LblRobotStatus" Content="Robot Status :" Margin="10,35,0,0" Grid.Row="1" Height="37"
+        <Button Content="Start Timer" HorizontalAlignment="Right" Margin="0,0,177,10" Grid.Row="1"
+                VerticalAlignment="Bottom"
+                Width="88" Click="BtnStartSimulationClick" />
+        <Button Content="Stop Timer" HorizontalAlignment="Right" Margin="0,0,84,10" Grid.Row="1"
+                VerticalAlignment="Bottom"
+                Width="88" Click="BtnStopSimulationClick" />
+        <Label x:Name="LblRobotStatus" Content="Robot Status :" Margin="10,52,0,0" Grid.Row="1" Height="37"
                VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" FontSize="13" />
-        <Label x:Name="LblSimulationClick" Content="Clock" Margin="10,77,0,0" Grid.Row="1" Height="37"
+        <Label x:Name="LblSimulationClock" Content="Clock" Margin="10,10,0,0" Grid.Row="1" Height="37"
                VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" FontSize="13" />
+
+        <FutureEventList:SystemImageControl x:Name="SysImageCtrl" HorizontalAlignment="Left" Margin="269,0,0,10" Grid.Row="1" VerticalAlignment="Bottom" Width="253"/>
 
     </Grid>
 </Window>
