--- a/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
+++ b/final.project/Source Code/FinalProject/SimulationWorld/World.xaml
@@ -1,38 +1,44 @@
 ﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:helixKit="http://helixtoolkit.codeplex.com"
-        xmlns:simulationElements="clr-namespace:FinalProject.SimulationElements"
-        xmlns:FutureEventList="clr-namespace:FinalProject.SimulationElements.FutureEventList" x:Class="FinalProject.SimulationWorld.World"
-        Title="World" Height="680" Width="840">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:helixKit="http://helixtoolkit.codeplex.com"
+    xmlns:simulationElements="clr-namespace:FinalProject.SimulationElements"
+    xmlns:FutureEventList="clr-namespace:FinalProject.SimulationElements.FutureEventList"
+    x:Class="FinalProject.SimulationWorld.World"
+    Title="World" Height="680" Width="840">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Menu Grid.Row="0">
             <MenuItem Header="File">
-                <MenuItem Header="Exit" Click="MnuItemExitClick"/>
+                <MenuItem Header="Exit" Click="MnuItemExitClick" />
             </MenuItem>
             <MenuItem Header="View">
-                <MenuItem x:Name="MenuItemShowCameraInfo" Header="Show Camera Info" IsCheckable="True" IsChecked="True"/>
-                <MenuItem x:Name="MenuItemShowFrameRate" Header="Show Frame Rate" IsCheckable="True" IsChecked="True"/>
+                <MenuItem x:Name="MenuItemShowCameraInfo" Header="Show Camera Info" IsCheckable="True" IsChecked="True" />
+                <MenuItem x:Name="MenuItemShowFrameRate" Header="Show Frame Rate" IsCheckable="True" IsChecked="True" />
                 <MenuItem x:Name="MenuItemShowFieldOfView" Header="Show Field of View" IsCheckable="True"
-                          IsChecked="True"/>
+                          IsChecked="True" />
                 <MenuItem x:Name="MenuItemShowCoordinateSystem" Header="Show Coordinate System" IsCheckable="True"
-                          IsChecked="True"/>
+                          IsChecked="True" />
             </MenuItem>
             <MenuItem Header="Timer">
-                <MenuItem Header="Start Timer" Click="BtnStartSimulationClick"/>
-                <MenuItem Header="Stop Timer" Click="BtnStopSimulationClick"/>
+                <MenuItem Header="Start Timer" Click="BtnStartSimulationClick" />
+                <MenuItem Header="Stop Timer" Click="BtnStopSimulationClick" />
+                <Separator />
+                <MenuItem x:Name="MnuChkFastEntrance" Header="Fast Entrances" IsChecked="False" IsCheckable="True"></MenuItem>
             </MenuItem>
             <MenuItem Header="About">
-                <MenuItem Header="About!" IsEnabled="False"/>
+                <MenuItem Header="About!" IsEnabled="False" />
             </MenuItem>
         </Menu>
         <helixKit:HelixViewport3D x:Name="Mother" Grid.Row="1"
-                                  ShowCameraInfo="{Binding IsChecked, ElementName=MenuItemShowCameraInfo}" ShowCoordinateSystem="{Binding IsChecked, ElementName=MenuItemShowCoordinateSystem}" ShowFrameRate="{Binding IsChecked, ElementName=MenuItemShowFrameRate}" ShowFieldOfView="{Binding IsChecked, ElementName=MenuItemShowFieldOfView}">
-            <helixKit:SunLight/>
-            <helixKit:GridLinesVisual3D Length="32" MinorDistance="1" MajorDistance="1" Thickness="0.01" Width="32"/>
+                                  ShowCameraInfo="{Binding IsChecked, ElementName=MenuItemShowCameraInfo}"
+                                  ShowCoordinateSystem="{Binding IsChecked, ElementName=MenuItemShowCoordinateSystem}"
+                                  ShowFrameRate="{Binding IsChecked, ElementName=MenuItemShowFrameRate}"
+                                  ShowFieldOfView="{Binding IsChecked, ElementName=MenuItemShowFieldOfView}">
+            <helixKit:SunLight />
+            <helixKit:GridLinesVisual3D Length="32" MinorDistance="1" MajorDistance="1" Thickness="0.01" Width="32" />
 
         </helixKit:HelixViewport3D>
         <Button Content="Start Timer" HorizontalAlignment="Right" Margin="0,0,177,10" Grid.Row="1"
@@ -46,7 +52,8 @@
         <Label x:Name="LblSimulationClock" Content="Clock" Margin="10,10,0,0" Grid.Row="1" Height="37"
                VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" FontSize="13" />
 
-        <FutureEventList:SystemImageControl x:Name="SysImageCtrl" HorizontalAlignment="Left" Margin="269,0,0,10" Grid.Row="1" VerticalAlignment="Bottom" Width="253"/>
+        <FutureEventList:SystemImageControl x:Name="SysImageCtrl" HorizontalAlignment="Left" Margin="269,0,0,10"
+                                            Grid.Row="1" VerticalAlignment="Bottom" Width="253" />
 
     </Grid>
 </Window>
